tests/NormalTests/paczka1/fuzzy1/49928599.err
Error in line 9: qUF9LcUP A589 50,8
Error in line 19: INg7 A761 24,0
Error in line 17: qUF9LcUP A761 286,2
